--- a/build.gradle
+++ b/build.gradle
@@ -32,11 +32,13 @@ dependencies {
 
 	//mybatis
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
-	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
 
+	//mariaDB
+	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+
 	// MySQL
-	runtimeOnly 'mysql:mysql-connector-java:8.0.33'
+//	runtimeOnly 'mysql:mysql-connector-java:8.0.33'
 
 	//lombok
 	compileOnly 'org.projectlombok:lombok'
@@ -64,6 +66,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-logging'
 
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
 	runtimeOnly 'org.springframework.boot:spring-boot-starter-tomcat'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -72,4 +75,10 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+tasks.register('copy', Copy) {
+	from './Set-What-should-I-do-after-work/application.yml'
+	include "*.yml"
+	into 'src/main/resources'
 }
