Refactor 소셜로그인 구현 추가 및 회원 정보 수정 페이지 분리(로컬,소셜), 소셜로그인 유지 기능 구현 추가 중

--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,9 @@ dependencies {
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
 	testImplementation 'org.springframework.security:spring-security-test'
 
+	//OAuth2
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+
 	//임시 비밀번호 발급 (메일)
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 
@@ -83,4 +86,9 @@ task copyGitSubmodule(type: Copy) {
 		include "*.yml"
 		into './src/main/resources'
 	}
+}
+
+// deprecated API 사용에 대한 경고를 표시
+tasks.withType(JavaCompile) {
+	options.compilerArgs << "-Xlint:deprecation"
 }
